--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,11 +1,11 @@
 .footer {
-  padding: 4rem 0 2rem;
+  padding: 1rem 0 2rem;
   background-color: var(--color-secondary);
 
   &__container {
     max-width: 1248px;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: var(--padding-container);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +27,6 @@
   &__text {
     color: var(--color-accent);
     font-size: 1.5rem;
-    font-family: 'Lato Bold', sans-serif;
     text-align: center;
   }
 
