--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,9 +8,8 @@
   padding: 1rem 0;
 
   &__container {
-    max-width: 1248px;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: var(--padding-container);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -98,7 +97,7 @@
       width: 100%;
       height: 2px;
       background-color: var(--color-text);
-      transition: transform 0.3s ease;
+      transition: var(--transition-transform);
     }
 
     @media (max-width: 768px) {
