--- a/src/components/Offers/Offers.scss
+++ b/src/components/Offers/Offers.scss
@@ -3,22 +3,30 @@
   background-color: var(--color-background);
 
   &__container {
-    max-width: 1248px;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: var(--padding-container);
   }
 
   &__title {
     font-size: 2.5rem;
     color: var(--color-text);
     margin-bottom: 3rem;
-    text-align: left;
-  }
+    line-height: 1;  }
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 2rem 2rem;
+
+    @media (max-width: 992px) {
+      grid-template-rows: repeat(2, 1fr);
+    }
+  
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(4, 1fr);
+    }
   }
 }
 
@@ -26,10 +34,10 @@
   position: relative;
   border-radius: 1rem;
   overflow: hidden;
-  transition: transform 0.3s ease;
+  transition: var(--transition-transform);
   height: 100%;
-  min-height: 400px;
-  line-height: normal;
+  height: 350px;
+  line-height: 1;
 
   &:hover {
     transform: translateY(-5px);
@@ -47,7 +55,7 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
-    transition: transform 0.3s ease;
+    transition: var(--transition-transform);
   }
 
   &__content {
@@ -57,24 +65,24 @@
     padding: 1.5rem;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-around;
+    justify-content: flex-end;
+    max-width: 600px;
   }
 
   &__title {
-    font-size: 40px;
+    font-size: 3rem;
     color: var(--color-text);
     margin-bottom: 1rem;
+
+    @media (max-width: 992px) {
+      font-size: 2rem;
+    }
   }
 
   &__description {
+    font-size: 1.2rem;
     color: var(--color-text);
     margin-bottom: 1.5rem;
-    font-size: 24px;
-    font-family: 'Lato Bold', sans-serif;
-
-    @media (max-width: 768px) {
-      font-size: 16px;
-    }
   }
 
   &__cta {
@@ -84,7 +92,6 @@
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
     border-radius: 50px;
-    font-family: 'Lato Bold', sans-serif;
     transition: all 0.3s ease;
     cursor: pointer;
 
@@ -93,7 +100,47 @@
     }
   }
 
+  &:nth-child(1), &:nth-child(4) {
+    grid-column: 1 / span 2;
+
+    .offer-card__title {
+      font-size: 4rem;
+    }
+
+    .offer-card__description {
+      font-size: 1.8rem;
+    }
+  }
+
+  @media (max-width: 992px) {
+    &:nth-child(1) {
+      grid-column: 1 / span 1;
+
+      .offer-card__title {
+        font-size: 2rem;
+      }
+
+      .offer-card__description {
+        font-size: 1.2rem;
+      }
+    }
+    &:nth-child(4) {
+      grid-column: 2 / span 1;
+
+      .offer-card__title {
+        font-size: 2rem;
+      }
+
+      .offer-card__description {
+        font-size: 1.2rem;
+
+      }
+    }
+  }
+
   @media (max-width: 768px) {
-    min-height: 350px;
+    &:nth-child(1), &:nth-child(4) {
+      grid-column: 1 / span 1;
+    }
   }
 } 
