--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -28,7 +28,7 @@
     border: none;
     padding: 1rem 0;
     border-radius: 50px;
-    transition: all 0.3s ease;
+    transition: var(--transition-all);
     cursor: pointer;
 
     &:hover {
