--- a/src/components/Offers/Offers.scss
+++ b/src/components/Offers/Offers.scss
@@ -11,7 +11,8 @@
     font-size: 2.5rem;
     color: var(--color-text);
     margin-bottom: 3rem;
-    line-height: 1;  }
+    line-height: 1;
+  }
 
   &__grid {
     display: grid;
@@ -91,8 +92,7 @@
     border: 2px solid var(--color-accent);
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
-    border-radius: 50px;
-    transition: all 0.3s ease;
+    transition: var(--transition-all);
     cursor: pointer;
 
     &:hover {
