--- a/src/components/Offers/Offers.scss
+++ b/src/components/Offers/Offers.scss
@@ -1,5 +1,5 @@
 .offers {
-  padding: 4rem 0;
+  padding: var(--padding-section);
   background-color: var(--color-background);
 
   &__container {
@@ -23,7 +23,7 @@
     @media (max-width: 992px) {
       grid-template-rows: repeat(2, 1fr);
     }
-  
+
     @media (max-width: 768px) {
       grid-template-columns: 1fr;
       grid-template-rows: repeat(4, 1fr);
@@ -57,6 +57,7 @@
     object-fit: cover;
     object-position: center;
     transition: var(--transition-transform);
+    filter: brightness(0.6);
   }
 
   &__content {
@@ -74,6 +75,7 @@
     font-size: 3rem;
     color: var(--color-text);
     margin-bottom: 1rem;
+    transition: font-size 0.3s ease;
 
     @media (max-width: 992px) {
       font-size: 2rem;
@@ -86,21 +88,8 @@
     margin-bottom: 1.5rem;
   }
 
-  &__cta {
-    background-color: transparent;
-    color: var(--color-accent);
-    border: 2px solid var(--color-accent);
-    padding: 0.75rem 1.5rem;
-    font-size: 1rem;
-    transition: var(--transition-all);
-    cursor: pointer;
-
-    &:hover {
-      opacity: var(--opacity-hover);
-    }
-  }
-
-  &:nth-child(1), &:nth-child(4) {
+  &:nth-child(1),
+  &:nth-child(4) {
     grid-column: 1 / span 2;
 
     .offer-card__title {
@@ -133,14 +122,14 @@
 
       .offer-card__description {
         font-size: 1.2rem;
-
       }
     }
   }
 
   @media (max-width: 768px) {
-    &:nth-child(1), &:nth-child(4) {
+    &:nth-child(1),
+    &:nth-child(4) {
       grid-column: 1 / span 1;
     }
   }
-} 
+}
