--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,8 @@
   --transition-all: all 0.3s ease;
   --padding-container: 0 1.5rem;
   --padding-section: 2rem 0;
+  --button-min-width-desktop: 190px;
+  --button-min-width-mobile: 160px;
 }
 
 * {
