--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,3 +1,5 @@
+@import "../../constants.scss";
+
 .footer {
   padding: 1rem 0 2rem;
   background-color: var(--color-secondary);
@@ -30,11 +32,11 @@
     text-align: center;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: $breakpoint-mobile) {
     padding: 3rem 0 1.5rem;
 
     &__text {
       font-size: 1.2rem;
     }
   }
-} 
+}
