--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -46,7 +46,7 @@
     max-width: 600px;
 
     @media (max-width: $breakpoint-mobile) {
-      margin: 0 auto;
+      margin: 2.5rem auto;
       max-width: 500px;
     }
   }
